--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./dist/image/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./dist/output.css">
-    <title>Document</title>
+    <title>SNEAKERs</title>
 </head>
 <!-- Primary Meta Tags -->
 <title> SNEAKERS</title>
@@ -28,6 +28,7 @@
 <meta property="twitter:image" content="https://i.ibb.co/vmSHKkz/Screenshot-2024-02-05-110152.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
+
 <body>
     <section class="bg-white">
         <div class="container mx-auto max-w-[1320px] px-[12px] max-md:shadow-5xl">
@@ -47,39 +48,39 @@
                             <ul class="flex items-center  max-md:flex-col gap-[15px] max-lg:gap-[20px]">
                                 <a href="#home">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]    ">
                                         HOME
                                     </li>
                                 </a>
-
-                                <a href="#sneakers">
+    
+                                <a href="#snakers">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit  text-black font-[400] text-[18px]  ">
                                         SNEAKERS KOPEN
                                     </li>
                                 </a>
-                                <a href="#interview">
+                                <a href="#interviews">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                         INTERVIEWS</li>
                                 </a>
                                 <a href="#sale">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                         SALE
                                     </li>
                                 </a>
                                 <a href="#van">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                         SNEAKER VAN DE
                                         DAG
                                     </li>
                                 </a>
-
+    
                                 <a href="#blog">
                                     <li
-                                        class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                        class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                         BLOG
                                     </li>
                                 </a>
@@ -99,41 +100,41 @@
 
         </div>
     </section>
-    <section class="shadow-5xl max-lg:hidden" id="home">
+    <section class="shadow-5xl max-md:hidden" id="home">
         <div class="container mx-auto max-w-[1320px] flex-col flex  px-[12px]  ">
-            <div class="flex pt-[29px]  pb-[30px] items-center justify-end  max-lg:justify-start">
+            <div class="flex pt-[29px]  pb-[30px] items-center justify-end  ">
 
                 <div
                     class="flex  items-center   justify-between z-[50]   max-md:fixed  max-md:bg-white max-md:w-full max-md:h-full max-md:top-0 max-md:right-[-100%] max-md:flex-col max-md:justify-center menulist duration-500">
                     <div class="flex items-center  max-md:flex-col max-lg:gap-[20px]  gap-[56px] ">
-                        <ul class="flex items-center  max-md:flex-col gap-[15px] max-lg:gap-[20px]">
+                        <ul class="flex items-center   max-md:flex-col gap-[15px] max-lg:gap-[20px]">
                             <a href="#home">
                                 <li
-                                    class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]    ">
                                     HOME
                                 </li>
                             </a>
 
                             <a href="#snakers">
                                 <li
-                                    class="font-Roboto cursor-pointer  text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit  text-black font-[400] text-[18px]  ">
                                     SNEAKERS KOPEN
                                 </li>
                             </a>
                             <a href="#interviews">
                                 <li
-                                    class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                     INTERVIEWS</li>
                             </a>
                             <a href="#sale">
                                 <li
-                                    class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                     SALE
                                 </li>
                             </a>
                             <a href="#van">
                                 <li
-                                    class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                     SNEAKER VAN DE
                                     DAG
                                 </li>
@@ -141,7 +142,7 @@
 
                             <a href="#blog">
                                 <li
-                                    class="font-Roboto cursor-pointer text-black font-[400] text-[18px] hover:font-[700] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-black after:duration-300">
+                                    class="font-Roboto cursor-pointer webkit text-black font-[400] text-[18px]  ">
                                     BLOG
                                 </li>
                             </a>
@@ -188,7 +189,7 @@
                 </div>
 
                 <div
-                    class=" lg:w-[50%] w-full max-lg:justify-center pl-[12px]     pr-[12px]  max-md:pt-[60px] pt-[125px] flex justify-end ">
+                    class=" lg:w-[50%] w-full max-lg:justify-center pl-[12px]     pr-[12px]  max-md:pt-[45px] pt-[125px] flex justify-end ">
                     <div class=" flex flex-col justify-center">
                         <h3 class="font-Poppins font-[600] text-[30px] text-black ">PREMIUM MENS SPORTS LATHER KEDS</h3>
                         <div class="flex flex-wrap items-center gap-[10px] pt-[14px]">
@@ -206,7 +207,7 @@
                             quis, lobortis sapien. Sed imperdiet nulla in leo ullamcorper, in finibus elit porta. Sed
                             eget congue neque, mattis finibus neque. In vel dolor ac augue pretium </p>
                         <div
-                            class="flex items-center pt-[87px] max-sm:pt-[33px] gap-[16px] pb-[24px]  max-sm:pb-[5px] flex-wrap">
+                            class="flex items-center pt-[87px] max-sm:pt-[33px] gap-[16px]    max-sm:pb-[5px] flex-wrap">
                             <p class="font-poppins text-[20px] leading-[25px] font-medium">Qty:</p>
                             <div
                                 class="flex w-[108px] justify-between py-[10px] px-[23px]  border rounded-[21px]  border-solid border-[#E0E0E0]">
@@ -225,7 +226,7 @@
                             </div>
                             <div class="">
                                 <button
-                                    class="font-[500] cursor-pointer font-Poppins duration-500 text-[20px] pt-[10px] pb-[10px]  text-white bg-[#28A745] rounded-[21px] pr-[32px] pl-[32px] bg-[#28A745]before:ease relative h-12 w-40 overflow-hidden  shadow-2xl before:absolute before:left-0 before:-ml-2 before:h-48 before:w-48 before:origin-top-right before:-translate-x-full before:translate-y-12 before:-rotate-90 before:bg-gray-900 before:transition-all before:duration-300 hover:text-white hover:shadow-black hover:before:-rotate-180">
+                                    class="font-[500] cursor-pointer text-nowrap font-Poppins duration-500 text-[20px] pt-[10px] pb-[10px]  text-white bg-[#28A745] rounded-[21px] pr-[32px] pl-[32px] bg-[#28A745]before:ease relative h-12 w-40 overflow-hidden  shadow-2xl before:absolute before:left-0 before:-ml-2 before:h-48 before:w-48 before:origin-top-right before:-translate-x-full before:translate-y-12 before:-rotate-90 before:bg-gray-900 before:transition-all before:duration-300 hover:text-white hover:shadow-black hover:before:-rotate-180">
                                     <span class="relative z-10">Add
                                         to Cart</span></button>
                             </div>
@@ -268,7 +269,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="flex  pt-[31px] ">
+                        <div class="flex  pt-[26px] ">
                             <div class="flex gap-[27px]   items-center">
                                 <div class="flex gap-[1px] cursor-pointer">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -290,8 +291,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="max-w-[541px] border-[1px] border-[#808080] mt-[31px]"></div>
-                        <div class="flex gap-[25px] items-center pt-[25px]">
+                        <div class="max-w-[541px] border-[1px] border-[#808080] mt-[20px]"></div>
+                        <div class="flex gap-[25px] items-center pt-[20px]">
                             <svg class="hover:-translate-y-2 duration-300 ease-linear cursor-pointer" width="22"
                                 height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g opacity="0.4">
@@ -359,8 +360,10 @@
                 </div>
             </div>
 
-            <h4 class="font-Poppins font-[500] text-[25px] pt-[81px] text-black max-w-[715px]">You can buy the Nike Air
+           <div class="flex max-lg:justify-center">
+            <h4 class="font-Poppins  font-[500] text-[25px] pt-[81px] max-md:pt-[40px] text-black max-w-[715px]">You can buy the Nike Air
                 Max 97 Men's Shoe - White here:</h4>
+           </div>
         </div>
     </section>
     <section class="" id="interviews">
@@ -374,7 +377,7 @@
     <section class="" id="sale">
         <div class="container mx-auto max-w-[1320px] px-[12px] ">
             <div class=" flex flex-col ">
-                <div class="flex threebtn gap-[91px] pt-[87px] flex-wrap max-sm:gap-[27px] ">
+                <div class="flex threebtn gap-[91px] max-md:pt-[60px] pt-[87px] flex-wrap max-sm:gap-[27px] ">
                     <button class="     text-black font-Poppins font-[400] text-[20px]    pb-[10px] mb-[-0.9px]"
                         onclick="navtabs('tab1')">DESCRIPTION</button>
                     <button class="  bg-[#fff] text-black font-Poppins font-[400] text-[20px] pb-[10px] mb-[-0.9px]"
@@ -428,11 +431,11 @@
     <section id="van">
         <div class="container mx-auto max-w-[1320px] px-[12px]">
             <h2
-                class="text-[30px] max-md:text-[27px] font-Poppins font-[600] max-w-[715px] text-black pt-[92px] pb-[20px] ">
+                class="text-[30px] max-md:text-[27px] font-Poppins font-[600] max-w-[715px] text-black pt-[92px] max-md:pt-[50px] pb-[20px] ">
                 RELATED
                 PRODUCT</h2>
 
-            <div id="cardcontainer" class="flex flex-wrap gap-[8px]">
+            <div id="cardcontainer" class="flex flex-wrap justify-center gap-[12px]">
 
             </div>
 
@@ -489,13 +492,12 @@
 
                     </div>
                 </div>
-                <div
-                    class="max-sm:w-full max-md:pt-[20px] lg:w-[16.66%] max-lg:w-[25%] max-md:w-[33.33%]  max-lg:justify-start pl-[12px] pr-[12px] flex justify-center ">
+                <div class=" max-lg:w-[25%] max-md:w-[50%] max-lg:pt-[20px]  max-lg:justify-start pl-[12px] pr-[12px] flex justify-center ">
                     <div class="flex flex-col">
 
                         <h3
                             class="font-Poppins  cursor-pointer font-[600] text-[18px] text-[#FFFFFF] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-white after:duration-300">
-                            CUSTOM LINKS</h3>
+                            CUSTOM  <span class="max-lg:hidden">LINKS</span></h3>
                         <h3 class="font-Poppins  cursor-pointer font-[400] text-[18px] text-[#B6B6B6] pt-[18px]   ">
                             Lorem ipsum</h3>
                         <h3 class="font-Poppins  cursor-pointer font-[400] text-[18px] text-[#B6B6B6] pt-[16px]">Lorem
@@ -503,8 +505,7 @@
 
                     </div>
                 </div>
-                <div
-                    class="max-sm:w-full max-md:pt-[20px] lg:w-[16.66%] max-lg:w-[25%] max-md:w-[33.33%]  max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
+                <div class=" max-lg:w-[25%] max-md:w-[50%] max-lg:pt-[20px]    max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
 
                     <div class="flex flex-col">
                         <h3
@@ -519,13 +520,12 @@
 
                     </div>
                 </div>
-                <div
-                    class="max-sm:w-full max-md:pt-[20px] lg:w-[16.66%] max-lg:w-[25%] max-md:w-[33.33%]  max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
+                <div class=" max-lg:w-[25%] max-md:w-[50%] max-lg:pt-[20px]   max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
 
                     <div class="flex flex-col">
                         <h3
                             class="font-Poppins  cursor-pointer font-[600] text-[18px] text-[#FFFFFF] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-white after:duration-300">
-                            OUR COMPANY</h3>
+                            <span class="max-lg:hidden">OUR</span> COMPANY</h3>
                         <h3 class="font-Poppins  cursor-pointer font-[400] text-[18px] text-[#B6B6B6] pt-[16px]">Lorem
                             ipsum</h3>
                         <h3 class="font-Poppins  cursor-pointer font-[400] text-[18px] text-[#B6B6B6] pt-[16px]">Lorem
@@ -533,13 +533,12 @@
 
                     </div>
                 </div>
-                <div
-                    class="max-sm:w-full max-md:pt-[20px] lg:w-[16.66%] max-lg:w-[25%] max-md:w-[33.33%]  max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
+                <div class=" max-lg:w-[25%] max-md:w-[50%] max-lg:pt-[20px]    max-lg:justify-start  pl-[12px] pr-[12px] flex justify-center">
                     <div class="flex flex-col">
 
                         <h3
                             class="font-Poppins  cursor-pointer  font-[600] text-[18px] text-[#FFFFFF] relative after:absolute after:h-[2px] after:w-0 after:inline-block after:bottom-[-1px] after:left-0 hover:after:w-full after:bg-white after:duration-300">
-                            YOUR ACCOUNT
+                            <span class="max-lg:hidden">YOUR</span> ACCOUNT
                         </h3>
                         <h3 class="font-Poppins  cursor-pointer font-[400] text-[18px] text-[#B6B6B6] pt-[18px]">Lorem
                             ipsum</h3>
