--- a/index.html
+++ b/index.html
@@ -374,15 +374,15 @@
             </div>
         </div>
     </section>
-    <section class="" id="sale">
+    <section class="overflow-hidden" id="sale">
         <div class="container mx-auto max-w-[1320px] px-[12px] ">
             <div class=" flex flex-col ">
-                <div class="flex threebtn gap-[91px] max-md:pt-[60px] pt-[87px] flex-wrap max-sm:gap-[27px] ">
-                    <button class="     text-black font-Poppins font-[400] text-[20px]    pb-[10px] mb-[-0.9px]"
+                <div class="flex threebtn max-md:overflow-x-scroll max-md:gap-[30px]  gap-[91px] max-md:pt-[60px] pt-[87px]   ">
+                    <button class="     text-black font-Poppins text-nowrap font-[400] text-[20px]    pb-[10px] mb-[-0.9px]"
                         onclick="navtabs('tab1')">DESCRIPTION</button>
-                    <button class="  bg-[#fff] text-black font-Poppins font-[400] text-[20px] pb-[10px] mb-[-0.9px]"
+                    <button class="  bg-[#fff] text-black text-nowrap font-Poppins font-[400] text-[20px] pb-[10px] mb-[-0.9px]"
                         onclick="navtabs('tab2')">ADDITIONAL INFORMATION</button>
-                    <button class="  bg-[#fff] text-black font-Poppins font-[400] text-[20px] pb-[10px] mb-[-0.9px]"
+                    <button class="  bg-[#fff] text-black text-nowrap font-Poppins font-[400] text-[20px] pb-[10px] mb-[-0.9px]"
                         onclick="navtabs('tab3')">REVIEWS (1)</button>
                 </div>
 
